--- a/edwinschoice.client/index.html
+++ b/edwinschoice.client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="cs">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
