--- a/edwinschoice.client/index.html
+++ b/edwinschoice.client/index.html
@@ -2,9 +2,9 @@
 <html lang="cs">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/items/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Edwin's Choice</title>
   </head>
   <body>
     <div id="root"></div>
